tests/transpiler/x/zig/dataset_where_filter.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/dataset_where_filter.zig:16:20: error: unable to infer array size
